--- a/app/templates/files/package.json
+++ b/app/templates/files/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "<%= componentCamelName %>",
+  "name": "<%= componentName %>",
   "version": "0.0.1",
   "description": "",
   "main": "gulpfile.js",
