--- a/app/templates/files/package.json
+++ b/app/templates/files/package.json
@@ -14,6 +14,7 @@
     "gulp": "^3.8.5",
     "jshint-stylish": "^0.2.0",
     "karma": "^0.12.16",
+    "karma-chai-plugins": "^0.5.0",
     "karma-chai-sinon": "^0.1.3",
     "karma-coverage": "^0.2.4",
     "karma-growler-reporter": "0.0.1",
