Add tota11y to manual.html. Let npm handle all dependencies in manual.html.

--- a/app/templates/files/package.json
+++ b/app/templates/files/package.json
@@ -24,6 +24,11 @@
     "q": "^1.0.1",
     "sinon": "^1.10.2",
     "sinon-chai": "^2.5.0",
-    "diversity-build": "git+https://git.diversity.io/tooling/diversity-build.git#master"
+    "diversity-build": "git+https://git.diversity.io/tooling/diversity-build.git#master",
+    "tota11y": "*",
+    "angular": "^1.4.1",
+    "angular-sanitize": "^1.4.1",
+    "jquery": "^2.1.4",
+    "mustache": "^2.1.2"
   }
 }
