Add protractor, automate more and make more (all?) lib dependencies point to local resources.

--- a/app/templates/files/package.json
+++ b/app/templates/files/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "karma start test/karma.conf.js"
+    "test": "gulp karma && gulp protractor"
   },
   "author": "Textalk",
   "license": "MIT",
@@ -24,11 +24,13 @@
     "q": "^1.0.1",
     "sinon": "^1.10.2",
     "sinon-chai": "^2.5.0",
-    "diversity-build": "git+https://git.diversity.io/tooling/diversity-build.git#master",
+    "diversity-build": "git+https://git.diversity.io/tooling/diversity-build.git#feature/protractor-tests",
     "tota11y": "*",
     "angular": "^1.4.1",
     "angular-sanitize": "^1.4.1",
+    "angular-mocks": "^1.4.2",
     "jquery": "^2.1.4",
-    "mustache": "^2.1.2"
+    "mustache": "^2.1.2",
+    "gulp-protractor": "^1.0.0"
   }
 }
