--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "chalk": "^1.0.0",
     "change-case": "^2.3.0",
+    "request": "^2.58.0",
     "yeoman-generator": "^0.19.2"
   },
   "licenses": [
