--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "1.1.0",
   "description": "Yeoman generator for Diversity component",
   "author": "Simon Korn",
+  "contributors": [
+    {
+      "name": "Josef Engelfrost",
+      "email": "josef.engelfrost@josf.se",
+      "url": "http://josf.se"
+    }
+  ],
   "main": "app/index.js",
   "files": [
     "app"
