Include bootlint-gui in manual.html

--- a/app/templates/files/package.json
+++ b/app/templates/files/package.json
@@ -31,6 +31,7 @@
     "angular-mocks": "^1.4.2",
     "jquery": "^2.1.4",
     "mustache": "^2.1.2",
-    "gulp-protractor": "^1.0.0"
+    "gulp-protractor": "^1.0.0",
+    "bootlint-gui": "0.0.3"
   }
 }
