--- a/app/templates/files/package.json
+++ b/app/templates/files/package.json
@@ -21,6 +21,7 @@
     "jquery": "^2.1.4",
     "jshint-stylish": "^0.2.0",
     "karma": "^0.12.16",
+    "karma-babel-preprocessor": "^5.2.2",
     "karma-chai-plugins": "^0.5.0",
     "karma-chai-sinon": "^0.1.3",
     "karma-coverage": "^0.2.4",
