--- a/package.json
+++ b/package.json
@@ -18,10 +18,20 @@
   "keywords": [
     "yeoman-generator"
   ],
+  "scripts": {
+    "compile": "babel index.js --out-file app/index.js",
+    "watch": "babel index.js --watch --out-file app/index.js",
+    "prepublish": "npm run compile"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
   "dependencies": {
+    "babel-polyfill": "^6.6.1",
     "chalk": "^1.0.0",
     "change-case": "^2.3.0",
-    "request": "^2.58.0",
     "yeoman-generator": "^0.19.2"
   },
   "licenses": [
@@ -29,5 +39,9 @@
       "type": "MIT",
       "url": "https://raw.githubusercontent.com/kornosaurus/generator-diversity-component/master/LICENSE"
     }
-  ]
+  ],
+  "devDependencies": {
+    "babel-cli": "^6.6.0",
+    "babel-preset-es2015": "^6.6.0"
+  }
 }
