moved babelrc to package.json

--- a/app/templates/files/package.json
+++ b/app/templates/files/package.json
@@ -8,6 +8,11 @@
   },
   "author": "Textalk",
   "license": "MIT",
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
   "devDependencies": {
     "angular": "^1.5.1",
     "angular-sanitize": "^1.5.1",
