--- a/app/templates/files/package.json
+++ b/app/templates/files/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "gulp karma && gulp protractor"
+    "build": "gulp minify",
+    "test-dependencies": "gulp test-dependencies"
   },
   "author": "Textalk",
   "license": "MIT",
@@ -22,22 +23,10 @@
     "connect": "^2.21.1",
     "diversity-build": "git+https://git.diversity.io/tooling/diversity-build.git#master",
     "gulp": "^3.8.5",
-    "gulp-protractor": "^1.0.0",
     "jquery": "^2.1.4",
-    "jshint-stylish": "^0.2.0",
-    "karma": "^0.12.16",
-    "karma-babel-preprocessor": "^5.2.2",
-    "karma-chai-plugins": "^0.5.0",
-    "karma-chai-sinon": "^0.1.3",
-    "karma-coverage": "^0.2.4",
-    "karma-growler-reporter": "0.0.1",
-    "karma-mocha": "^0.1.4",
-    "karma-ng-html2js-preprocessor": "^0.1.0",
     "mocha": "^1.20.1",
     "mustache": "^2.1.2",
     "q": "^1.0.1",
-    "sinon": "^1.10.2",
-    "sinon-chai": "^2.5.0",
     "tota11y": "*"
   }
 }
